--- a/src/patternfly/components/Menu/templates/menu-breadcrumbs--Drilldown.hbs
+++ b/src/patternfly/components/Menu/templates/menu-breadcrumbs--Drilldown.hbs
@@ -28,7 +28,7 @@
           {{/breadcrumb-link}}
         {{/breadcrumb-item}}
 
-        {{#> menu-breadcrumbs--dropdown menu-toggle--badge--text="1" menu-toggle--IsExpanded=true}}
+        {{#> menu-breadcrumbs--dropdown menu-toggle--badge--text="1"}}
           {{#> menu-list-item}}
             {{#> menu-item}}
               {{#> menu-item-main}}
@@ -65,7 +65,7 @@
           {{/breadcrumb-link}}
         {{/breadcrumb-item}}
 
-        {{#> menu-breadcrumbs--dropdown menu-toggle--badge--text="2" menu-toggle--IsExpanded=true}}
+        {{#> menu-breadcrumbs--dropdown menu-toggle--badge--text="2"}}
           {{#> menu-list-item}}
             {{#> menu-item}}
               {{#> menu-item-main}}
