--- a/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
+++ b/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
@@ -1,5 +1,5 @@
 {{#> overflow-menu overflow-menu--id=tabs--table-overflow-menu--id}}
-  {{#> overflow-menu-control overflow-menu-button--aria-label="Menu for tabs table" overflow-menu-button--aria-expanded=menu--IsExpanded}}
+  {{#> overflow-menu-control overflow-menu-button--aria-label="Menu for tabs table"}}
     {{#> overflow-menu-menu}}
       {{> menu-list-item menu-list-item--text='Action link'}}
     {{/overflow-menu-menu}}
