--- a/src/patternfly/components/Toolbar/templates/toolbar--overflow-menu.hbs
+++ b/src/patternfly/components/Toolbar/templates/toolbar--overflow-menu.hbs
@@ -38,11 +38,8 @@
       {{/overflow-menu-group}}
     {{/overflow-menu-content}}
 
-    {{#> overflow-menu-control menu--IsExpanded=true overflow-menu-button--aria-label="Menu with additional options"}}
+    {{#> overflow-menu-control overflow-menu-button--aria-label="Menu with additional options"}}
       {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--icon='toolbox'}}
-      {{#> overflow-menu-menu}}
-        {{> menu-list-item menu-list-item--text='Action 7'}}
-      {{/overflow-menu-menu}}
     {{/overflow-menu-control}}
   {{/overflow-menu}}
 {{/toolbar-item}}
