chore(pagination): s/pagination-options-menupagination-menu-toggle

--- a/src/patternfly/components/Toolbar/toolbar-item-pagination.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item-pagination.hbs
@@ -4,7 +4,7 @@
       37 items
     {{/pagination-total-items}}
 
-    {{> pagination-options-menu pagination-options-menu--id=(concat toolbar--id '-pagination-options-menu') }}
+    {{> pagination-menu-toggle pagination-menu-toggle--id=(concat toolbar--id '-pagination-menu-toggle') }}
 
     {{#> pagination-nav}}
       {{#> pagination-nav-control pagination-nav-control--modifier="pf-m-first"}}
