--- a/src/patternfly/demos/PrimaryDetail/primary-detail-template-card-toolbar.hbs
+++ b/src/patternfly/demos/PrimaryDetail/primary-detail-template-card-toolbar.hbs
@@ -11,7 +11,7 @@
           {{#> pagination-total-items}}
             <b>1 - 10</b> of <b>37</b>
           {{/pagination-total-items}}
-          {{> pagination-options-menu pagination-options-menu--id=(concat toolbar--id '-pagination-options-menu')}}
+          {{> pagination-menu-toggle pagination-menu-toggle--id=(concat toolbar--id '-pagination-menu-toggle')}}
         {{/pagination}}
       {{/toolbar-item}}
     {{/toolbar-content-section}}
