--- a/src/patternfly/demos/Table/table-pagination-footer-static.hbs
+++ b/src/patternfly/demos/Table/table-pagination-footer-static.hbs
@@ -1,4 +1,4 @@
 {{#> pagination pagination--modifier="pf-m-bottom pf-m-static"}}
-  {{> pagination-options-menu pagination-options-menu--id="{{page--id}}-pagination-options-menu-bottom-example-static" pagination-options-menu--modifier="pf-m-top"}}
+  {{> pagination-menu-toggle pagination-menu-toggle--id="{{page--id}}-pagination-menu-toggle-bottom-example-static" pagination-menu-toggle--modifier="pf-m-top"}}
   {{> pagination-nav-content}}
 {{/pagination}}
