--- a/src/patternfly/components/Pagination/pagination-menu-toggle.hbs
+++ b/src/patternfly/components/Pagination/pagination-menu-toggle.hbs
@@ -1,7 +1,8 @@
 {{#> menu-toggle
-      menu-toggle--IsPlain=true
-      menu-toggle--IsText=true
-      menu-toggle--modifier=pagination-menu-toggle--modifier menu-toggle--id=pagination-menu-toggle--id}}
+  menu-toggle--IsPlain=true
+  menu-toggle--IsText=true
+  menu-toggle--modifier=pagination-menu-toggle--modifier menu-toggle--id=pagination-menu-toggle--id
+  menu-toggle--attribute='aria-label="Items per page"'}}
   {{#> menu-toggle-text}}
     <b>1 - 10</b>&nbsp;of&nbsp;<b>{{#if pagination--IsIndeterminate}}many{{else}}36{{/if}}</b>
   {{/menu-toggle-text}}
