chore(menu-toggle): removed errant menu-item

--- a/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
+++ b/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
@@ -26,7 +26,7 @@
           {{> menu-toggle
               menu-toggle--IsPlain=true
               menu-toggle--HasKebab=true
-              menu-toggle--id=(dasherize hint--id 'hint')
+              menu-toggle--id=(dasherize log-viewer--id 'hint')
               menu-toggle--aria-label='Hint menu toggle'
             }}
         {{/toolbar-item}}
