--- a/src/patternfly/demos/PrimaryDetail/primary-detail-template-card-view.hbs
+++ b/src/patternfly/demos/PrimaryDetail/primary-detail-template-card-view.hbs
@@ -3,7 +3,7 @@
     {{#> card-header}}
       <img src="/assets/images/pf-logo-small.svg" alt="PatternFly logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -22,7 +22,7 @@
     {{#> card-header}}
       <img src="/assets/images/activemq-core_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -41,7 +41,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-spark_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -60,7 +60,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-avro_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -79,7 +79,7 @@
   {{#> card-header}}
     <img src="/assets/images/FuseConnector_Icons_AzureServices.png" width="60px" alt="Logo">
     {{#> card-actions}}
-      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
       {{#> check check--modifier="pf-m-standalone"}}
         {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
       {{/check}}
@@ -98,7 +98,7 @@
   {{#> card-header}}
       <img src="/assets/images/camel-saxon_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -117,7 +117,7 @@
     {{#> card-header}}
       <img src="/assets/images/pf-logo-small.svg" alt="PatternFly logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -136,7 +136,7 @@
     {{#> card-header}}
       <img src="/assets/images/pf-logo-small.svg" alt="PatternFly logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -155,7 +155,7 @@
     {{#> card-header}}
       <img src="/assets/images/pf-logo-small.svg" alt="PatternFly logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -174,7 +174,7 @@
     {{#> card-header}}
       <img src="/assets/images/pf-logo-small.svg" alt="PatternFly logo">
       {{#> card-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id 'toggle')}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
