--- a/src/patternfly/components/Toolbar/toolbar-overflow-menu-example.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-overflow-menu-example.hbs
@@ -36,14 +36,8 @@
     {{/if}}
 
     {{#if toolbar-overflow-menu-example--control}}
-      {{#> overflow-menu-control overflow-menu-button--aria-label="Overflow menu"}}
-        {{#> overflow-menu-menu}}
-          {{#unless toolbar-overflow-menu-example--content}}
-            {{> menu-list-item menu-list-item--text='Primary'}}
-            {{> menu-list-item menu-list-item--text='Secondary'}}
-          {{/unless}}
-          {{> menu-list-item menu-list-item--text='Tertiary'}}
-        {{/overflow-menu-menu}}
+      {{#> overflow-menu-control menu-toggle--aria-label="Additional options toggle"}}
+        {{> menu-toggle menu-toggle--HasKebab=true menu-toggle--IsPlain=true menu-toggle--id=(dasherize overflow-menu--id 'toggle')}}
       {{/overflow-menu-control}}
     {{/if}}
   {{/overflow-menu}}
