--- a/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
+++ b/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
@@ -1,7 +1,5 @@
 {{#> overflow-menu overflow-menu--id=tabs--table-overflow-menu--id}}
   {{#> overflow-menu-control overflow-menu-button--aria-label="Menu for tabs table"}}
-    {{#> overflow-menu-menu}}
-      {{> menu-list-item menu-list-item--text='Action link'}}
-    {{/overflow-menu-menu}}
+    {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize overflow-menu--id 'toggle')}}
   {{/overflow-menu-control}}
 {{/overflow-menu}}
