feat(Page): remove deprecated page header

--- a/src/patternfly/demos/Page/page-demo-sticky-top-section-group.hbs
+++ b/src/patternfly/demos/Page/page-demo-sticky-top-section-group.hbs
@@ -1,5 +1,5 @@
 {{#> page page--id=page-demo-default--id}}
-  {{> page-template-header}}
+  {{> masthead-template}}
   {{> page-template-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
     {{#> page-main-group page-main-group--modifier="pf-m-sticky-top"}}
