--- a/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
@@ -2,22 +2,7 @@
   {{#> skip-to-content skip-to-content--href=(concat '#main-content-' page--id)}}
     Skip to content
   {{/skip-to-content}}
-  {{#> page-header}}
-    {{!-- Brand --}}
-    {{#> page-header-brand}}
-      {{#> page-header-brand-toggle}}
-        {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'id="' page--id '-nav-toggle" aria-label="Global navigation" aria-expanded="true" aria-controls="' page--id '-expandable-nav"')}}
-          <i class="fas fa-bars" aria-hidden="true"></i>
-        {{/button}}
-      {{/page-header-brand-toggle}}
-      {{#> page-header-brand-link page-header-brand-link--href="#"}}
-        {{#> brand brand--attribute='src="/assets/images/PF-Masthead-Logo.svg" alt="PatternFly logo"'}}{{/brand}}
-      {{/page-header-brand-link}}
-    {{/page-header-brand}}
-    {{#> page-template-header-tools-elements}}
-    {{/page-template-header-tools-elements}}
-  {{/page-header}}
-
+  {{> masthead-template}}
   {{#> page-sidebar}}
     {{#> nav nav--IsExpandable="true" nav--attribute=(concat 'id="' page--id '-expandable-nav" aria-label="Global"')}}
       {{#> nav-list}}
