--- a/src/patternfly/demos/Page/page-demo-sticky-top-horizontal-subnav.hbs
+++ b/src/patternfly/demos/Page/page-demo-sticky-top-horizontal-subnav.hbs
@@ -1,5 +1,5 @@
 {{#> page page--id=page-demo-default--id}}
-  {{> page-template-header}}
+  {{> masthead-template}}
   {{> page-template-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
     {{> page-template-horizontal-subnav page-template-horizontal-subnav--modifier="pf-m-sticky-top"}}
