--- a/src/patternfly/demos/Page/page-template-drawer-panel.hbs
+++ b/src/patternfly/demos/Page/page-template-drawer-panel.hbs
@@ -2,7 +2,7 @@
   {{#> drawer-body}}
     {{#> drawer-head}}
       {{#> drawer-actions}}
-        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--icon='close' menu-toggle--id=(dasherize page-template--id 'toggle')}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize page-template--id 'toggle')}}
         {{> drawer-close}}
       {{/drawer-actions}}
       {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
